--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "js-tdd-course",
+  "name": "spotify-wrapper-player",
   "version": "1.0.0",
-  "description": "Nossa biblioteca do curso de JS com TDD na prática.",
+  "description": "A player using the spotify-wrapper lib,",
   "main": "index.js",
   "scripts": {
     "clear": "rimraf lib",
@@ -11,7 +11,8 @@
     "prepush": "npm run lint",
     "test": "./node_modules/.bin/mocha tests/**/*.spec.js --require babel-register",
     "test:tdd": "./node_modules/.bin/mocha tests/**/*.spec.js --require babel-register --watch",
-    "test:coverage": "nyc npm test"
+    "test:coverage": "nyc npm test",
+    "start": "./node_modules/.bin/webpack-dev-server"
   },
   "nyc": {
     "reporter": [
@@ -24,21 +25,22 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/willianjusten/js-tdd-course.git"
+    "url": "git+https://github.com/isaiasmb/spotify-wrapper-player.git"
   },
   "keywords": [
     "js",
     "tdd",
     "library"
   ],
-  "author": "Willian Justen <willianjustenqui@gmail.com> (https://willianjusten.com.br/)",
+  "author": "Isaias Buscarino",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/willianjusten/js-tdd-course/issues"
+    "url": "https://github.com/isaiasmb/spotify-wrapper-player/issues"
   },
-  "homepage": "https://github.com/willianjusten/js-tdd-course#readme",
+  "homepage": "https://github.com/isaiasmb/spotify-wrapper-player#readme",
   "devDependencies": {
     "babel-cli": "^6.24.1",
+    "babel-loader": "7.0.0",
     "babel-preset-env": "^1.3.2",
     "babel-register": "^6.24.0",
     "chai": "^3.5.0",
@@ -48,6 +50,8 @@
     "husky": "^0.11.9",
     "mocha": "^3.2.0",
     "nyc": "^10.2.0",
-    "rimraf": "^2.6.1"
+    "rimraf": "^2.6.1",
+    "webpack": "2.6.1",
+    "webpack-dev-server": "2.4.5"
   }
 }
